[package]
name = "rargs"
version = "0.2.1"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "xargs + awk with pattern matching support."
documentation = "https://github.com/lotabout/rargs"
homepage = "https://github.com/lotabout/rargs"
repository = "https://github.com/lotabout/rargs"
readme  = "README.md"
keywords = ["xargs", "awk", "regex", "cli"]
license = "MIT"

[dependencies]
regex = "0.2.10"
structopt = "0.2"
lazy_static = "1.0.0"
num_cpus = "1.0"
threadpool = "1.0"

[dev-dependencies]
assert_cli = "0.5.4"
