[package]
name = "rargs"
version = "0.2.2"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "xargs + awk with pattern matching support."
documentation = "https://github.com/lotabout/rargs"
homepage = "https://github.com/lotabout/rargs"
repository = "https://github.com/lotabout/rargs"
readme  = "README.md"
keywords = ["xargs", "awk", "regex", "cli"]
license = "MIT"
edition = "2018"

[dependencies]
regex = "1.3.7"
structopt = "0.3.14"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
threadpool = "1.8.0"
human-panic = "1.0.3"

[dev-dependencies]
assert_cli = "0.6.3"
